# repak

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/repak/: __init__.py  archive.py  cli.py  naming.py  pypi.py  snippet.py  unpak_template.py  versioning.py  wheel.py
src/repak.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_archive.py  test_e2e.py  test_extract.py  test_naming.py  test_pypi.py  test_snippet.py  test_versioning.py  test_wheel.py
