[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repak"
version = "0.1.0"
description = "Transfer a local directory across a network boundary via a synthetic PyPI wheel"
requires-python = ">=3.9"
dependencies = ["twine>=4.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
repak = "repak.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repak = ["unpak_template.py"]

[tool.pytest.ini_options]
markers = ["slow: end-to-end tests that build venvs and install wheels"]
