[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repak"
dynamic = ["version"]
description = "Bundle a public directory once as a versioned, checksum-verified PyPI wheel — share Docker build assets, project scaffolds, and tool config that consumers pull with just pip or curl"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["pypi", "wheel", "scaffold", "docker", "tool-config", "bundle", "distribution"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Software Distribution",
]
dependencies = ["twine>=4.0"]

[project.urls]
Repository = "https://github.com/dlfelps/repak"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
repak = "repak.cli:main"

[tool.setuptools.dynamic]
version = { attr = "repak.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repak = ["unpak_template.py"]

[tool.pytest.ini_options]
markers = ["slow: end-to-end tests that build venvs and install wheels"]
